# curio

./: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  test-document.md  test-mermaid.md
.github/workflows/: release.yml
docs/: annotations-spec.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotations.rs  files.rs  lib.rs  main.rs
src/components/: AnnotationPanel.vue  AuthorPrompt.vue  CommentInput.vue  SearchBar.vue  SelectionToolbar.vue  SuggestEditInput.vue  ViewMenu.vue
src/composables/: useAnnotations.js  useFileWatcher.js  useMarkdown.js  useSearch.js  useSectionCopy.js  useUndoStack.js
src/styles/: markdown.css  prism-theme.css  variables.css
